--- a/recipes-extended/system-config/files/foot/foot.ini
+++ b/recipes-extended/system-config/files/foot/foot.ini
@@ -6,7 +6,7 @@ alpha=0.7
 # Nordiq
 [colors]
 foreground=dbdee9
-background=0e1420
+background=242424
 regular0=5b6272
 regular1=bf616a
 regular2=a3be8c
