universal configuration is moved to meta-image

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,6 +11,6 @@ BBFILE_PRIORITY_sway-image = "7"
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_sway-image = "1"
-LAYERSERIES_COMPAT_sway-image = "mickledore"
+LAYERSERIES_COMPAT_sway-image = "mickledore nanbield"
 LAYERDEPENDS_sway-image = "core"
 
