--- a/recipes-extended/system-config/files/waybar/config
+++ b/recipes-extended/system-config/files/waybar/config
@@ -9,7 +9,7 @@
     // Modules configuration
     "custom/launch":{
 	"format": "",
-	"on-click":"sirula",
+	"on-click":"nwggrid",
 	"tooltip": false,
     },
     "custom/power":{
